src/app/files/LdrColorGrammar.ts
/* eslint-disable */ import { Vector3, Matrix4 } from 'three';

// Generated by PEG.js v. 0.10.0 (ts-pegjs plugin v. 0.3.1 )
//
// https://pegjs.org/   https://github.com/metadevpro/ts-pegjs

"use strict";

export interface IFilePosition {
  offset: number;
  line: number;
  column: number;
}

export interface IFileRange {
  start: IFilePosition;
  end: IFilePosition;
}

export interface ILiteralExpectation {
  type: "literal";
  text: string;
  ignoreCase: boolean;
}

export interface IClassParts extends Array<string | IClassParts> {}

export interface IClassExpectation {
  type: "class";
  parts: IClassParts;
  inverted: boolean;
  ignoreCase: boolean;
}

export interface IAnyExpectation {
  type: "any";
}

export interface IEndExpectation {
  type: "end";
}

export interface IOtherExpectation {
  type: "other";
  description: string;
}

export type Expectation = ILiteralExpectation | IClassExpectation | IAnyExpectation | IEndExpectation | IOtherExpectation;

export class SyntaxError extends Error {
  public static buildMessage(expected: Expectation[], found: string | null) {
    function hex(ch: string): string {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function classEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function describeExpectation(expectation: Expectation) {
      switch (expectation.type) {
        case "literal":
          return "\"" + literalEscape(expectation.text) + "\"";
        case "class":
          const escapedParts = expectation.parts.map((part) => {
            return Array.isArray(part)
              ? classEscape(part[0] as string) + "-" + classEscape(part[1] as string)
              : classEscape(part);
          });

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        case "any":
          return "any character";
        case "end":
          return "end of input";
        case "other":
          return expectation.description;
      }
    }

    function describeExpected(expected1: Expectation[]) {
      const descriptions = expected1.map(describeExpectation);
      let i: number;
      let j: number;

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found1: string | null) {
      return found1 ? "\"" + literalEscape(found1) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }

  public message: string;
  public expected: Expectation[];
  public found: string | null;
  public location: IFileRange;
  public name: string;

  constructor(message: string, expected: Expectation[], found: string | null, location: IFileRange) {
    super();
    this.message = message;
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";

    if (typeof (Error as any).captureStackTrace === "function") {
      (Error as any).captureStackTrace(this, SyntaxError);
    }
  }
}

function peg$parse(input: string, options?: IParseOptions) {
  options = options !== undefined ? options : {};

  const peg$FAILED: Readonly<any> = {};

  const peg$startRuleFunctions: {[id: string]: any} = { Colors: peg$parseColors };
  let peg$startRuleFunction: () => any = peg$parseColors;

  const peg$c0 = function(c: any): any {
      	return c;
      };
  const peg$c1 = function(c: any): any {
  		return { comment: c};
      };
  const peg$c2 = "0";
  const peg$c3 = peg$literalExpectation("0", false);
  const peg$c4 = /^[^\r\^\n]/;
  const peg$c5 = peg$classExpectation(["\r", "^", "\n"], true, false);
  const peg$c6 = function(): any {
  		return text();
      };
  const peg$c7 = "!COLOUR";
  const peg$c8 = peg$literalExpectation("!COLOUR", false);
  const peg$c9 = "CODE";
  const peg$c10 = peg$literalExpectation("CODE", false);
  const peg$c11 = "VALUE";
  const peg$c12 = peg$literalExpectation("VALUE", false);
  const peg$c13 = "EDGE";
  const peg$c14 = peg$literalExpectation("EDGE", false);
  const peg$c15 = function(name: any, code: any, value: any, edge: any, alpha: any, luminance: any, texture: any): any {
      	return {
          	...{
                name: name,
                code: code,
                value: value,
                edge: edge,
          	},
              	...alpha,
                  ...luminance,
                  ...texture
          };
      };
  const peg$c16 = "ALPHA";
  const peg$c17 = peg$literalExpectation("ALPHA", false);
  const peg$c18 = function(a: any): any {
      	return { alpha: a};
      };
  const peg$c19 = "LUMINANCE";
  const peg$c20 = peg$literalExpectation("LUMINANCE", false);
  const peg$c21 = function(l: any): any {
      	return { luminance: l };
      };
  const peg$c22 = function(m: any): any {
      	return m;
  	};
  const peg$c23 = "CHROME";
  const peg$c24 = peg$literalExpectation("CHROME", false);
  const peg$c25 = "PEARLESCENT";
  const peg$c26 = peg$literalExpectation("PEARLESCENT", false);
  const peg$c27 = "RUBBER";
  const peg$c28 = peg$literalExpectation("RUBBER", false);
  const peg$c29 = "MATTE_METALLIC";
  const peg$c30 = peg$literalExpectation("MATTE_METALLIC", false);
  const peg$c31 = "METAL";
  const peg$c32 = peg$literalExpectation("METAL", false);
  const peg$c33 = function(): any {
  		return { texture: text().trim()};
  	};
  const peg$c34 = "MATERIAL";
  const peg$c35 = peg$literalExpectation("MATERIAL", false);
  const peg$c36 = function(a: any): any {
      	return { texture: "MATERIAL", args: a} 
      };
  const peg$c37 = function(a: any): any {
      	return a;
      };
  const peg$c38 = "SPECKLE";
  const peg$c39 = peg$literalExpectation("SPECKLE", false);
  const peg$c40 = "FRACTION";
  const peg$c41 = peg$literalExpectation("FRACTION", false);
  const peg$c42 = function(value: any, fraction: any, s: any): any {
  		return {
          	...{
          		type: "SPECKLE",
              	value: value,
              	fraction: fraction,
              },...s
          }
  	};
  const peg$c43 = "GLITTER";
  const peg$c44 = peg$literalExpectation("GLITTER", false);
  const peg$c45 = "VFRACTION";
  const peg$c46 = peg$literalExpectation("VFRACTION", false);
  const peg$c47 = function(value: any, fraction: any, vfraction: any, s: any): any {
      	return {
          	...{
  	        	type: "GLITTER",
      	        value: value,
          	    fraction: fraction,
              	vfraction: vfraction,
              },...s
          };
      };
  const peg$c48 = function(s: any): any {
      	return s;
      };
  const peg$c49 = "SIZE";
  const peg$c50 = peg$literalExpectation("SIZE", false);
  const peg$c51 = function(size: any): any {
      	return { size: size };
      };
  const peg$c52 = "MINSIZE";
  const peg$c53 = peg$literalExpectation("MINSIZE", false);
  const peg$c54 = "MAXSIZE";
  const peg$c55 = peg$literalExpectation("MAXSIZE", false);
  const peg$c56 = function(minSize: any, maxSize: any): any {
      	return {
          	minSize: minSize,
              maxSize: maxSize
         	};
      };
  const peg$c57 = /^[0-9]/;
  const peg$c58 = peg$classExpectation([["0", "9"]], false, false);
  const peg$c59 = function(): any {
  		return parseInt(text());
  	};
  const peg$c60 = /^[\-+]/;
  const peg$c61 = peg$classExpectation(["-", "+"], false, false);
  const peg$c62 = /^[.]/;
  const peg$c63 = peg$classExpectation(["."], false, false);
  const peg$c64 = function(): any {
      	return parseFloat(text());
      };
  const peg$c65 = "#";
  const peg$c66 = peg$literalExpectation("#", false);
  const peg$c67 = function(h: any): any {
      	return h;
      };
  const peg$c68 = /^[0-9A-F]/;
  const peg$c69 = peg$classExpectation([["0", "9"], ["A", "F"]], false, false);
  const peg$c70 = function(): any {
      	return parseInt(text(), 16);
      };
  const peg$c71 = function(): any {
      	return parseInt(text());
  	};
  const peg$c72 = /^[a-zA-Z0-9_]/;
  const peg$c73 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false);
  const peg$c74 = function(): any {
      	return text();
      };
  const peg$c75 = /^[ \t]/;
  const peg$c76 = peg$classExpectation([" ", "\t"], false, false);
  const peg$c77 = /^[\r\n]/;
  const peg$c78 = peg$classExpectation(["\r", "\n"], false, false);
  const peg$c79 = /^[\n]/;
  const peg$c80 = peg$classExpectation(["\n"], false, false);

  let peg$currPos = 0;
  let peg$savedPos = 0;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = 0;
  let peg$maxFailExpected: Expectation[] = [];
  let peg$silentFails = 0;

  let peg$result;

  if (options.startRule !== undefined) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text(): string {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location(): IFileRange {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description: string, location1?: IFileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location1
    );
  }

  function error(message: string, location1?: IFileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location1);
  }

  function peg$literalExpectation(text1: string, ignoreCase: boolean): ILiteralExpectation {
    return { type: "literal", text: text1, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts: IClassParts, inverted: boolean, ignoreCase: boolean): IClassExpectation {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation(): IAnyExpectation {
    return { type: "any" };
  }

  function peg$endExpectation(): IEndExpectation {
    return { type: "end" };
  }

  function peg$otherExpectation(description: string): IOtherExpectation {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos: number) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos: number, endPos: number): IFileRange {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected1: Expectation) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected1);
  }

  function peg$buildSimpleError(message: string, location1: IFileRange) {
    return new SyntaxError(message, [], "", location1);
  }

  function peg$buildStructuredError(expected1: Expectation[], found: string | null, location1: IFileRange) {
    return new SyntaxError(
      SyntaxError.buildMessage(expected1, found),
      expected1,
      found,
      location1
    );
  }

  function peg$parseColors(): any {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseColorOrComment();
    while (s2 as any !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseColorOrComment();
    }
    if (s1 as any !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseColorOrComment(): any {
    let s0, s1;

    s0 = peg$parseColor();
    if (s0 as any === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseComment();
      if (s1 as any !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c1(s1);
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parseComment(): any {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 48) {
      s1 = peg$c2;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c3); }
    }
    if (s1 as any !== peg$FAILED) {
      s2 = peg$parseCommentText();
      if (s2 as any !== peg$FAILED) {
        s3 = peg$parseEOL();
        if (s3 as any !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseCommentText(): any {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    if (peg$c4.test(input.charAt(peg$currPos))) {
      s2 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c5); }
    }
    while (s2 as any !== peg$FAILED) {
      s1.push(s2);
      if (peg$c4.test(input.charAt(peg$currPos))) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c5); }
      }
    }
    if (s1 as any !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c6();
    }
    s0 = s1;

    return s0;
  }

  function peg$parseColor(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16, s17, s18, s19, s20, s21;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 48) {
      s1 = peg$c2;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c3); }
    }
    if (s1 as any !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 as any !== peg$FAILED) {
        if (input.substr(peg$currPos, 7) === peg$c7) {
          s3 = peg$c7;
          peg$currPos += 7;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c8); }
        }
        if (s3 as any !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 as any !== peg$FAILED) {
            s5 = peg$parseName();
            if (s5 as any !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 as any !== peg$FAILED) {
                if (input.substr(peg$currPos, 4) === peg$c9) {
                  s7 = peg$c9;
                  peg$currPos += 4;
                } else {
                  s7 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c10); }
                }
                if (s7 as any !== peg$FAILED) {
                  s8 = peg$parse_();
                  if (s8 as any !== peg$FAILED) {
                    s9 = peg$parseCode();
                    if (s9 as any !== peg$FAILED) {
                      s10 = peg$parse_();
                      if (s10 as any !== peg$FAILED) {
                        if (input.substr(peg$currPos, 5) === peg$c11) {
                          s11 = peg$c11;
                          peg$currPos += 5;
                        } else {
                          s11 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$c12); }
                        }
                        if (s11 as any !== peg$FAILED) {
                          s12 = peg$parse_();
                          if (s12 as any !== peg$FAILED) {
                            s13 = peg$parseValue();
                            if (s13 as any !== peg$FAILED) {
                              s14 = peg$parse_();
                              if (s14 as any !== peg$FAILED) {
                                if (input.substr(peg$currPos, 4) === peg$c13) {
                                  s15 = peg$c13;
                                  peg$currPos += 4;
                                } else {
                                  s15 = peg$FAILED;
                                  if (peg$silentFails === 0) { peg$fail(peg$c14); }
                                }
                                if (s15 as any !== peg$FAILED) {
                                  s16 = peg$parse_();
                                  if (s16 as any !== peg$FAILED) {
                                    s17 = peg$parseValue();
                                    if (s17 as any !== peg$FAILED) {
                                      s18 = peg$parseAlpha();
                                      if (s18 as any === peg$FAILED) {
                                        s18 = null;
                                      }
                                      if (s18 as any !== peg$FAILED) {
                                        s19 = peg$parseLuminance();
                                        if (s19 as any === peg$FAILED) {
                                          s19 = null;
                                        }
                                        if (s19 as any !== peg$FAILED) {
                                          s20 = peg$parseTexture();
                                          if (s20 as any === peg$FAILED) {
                                            s20 = null;
                                          }
                                          if (s20 as any !== peg$FAILED) {
                                            s21 = peg$parseEOL();
                                            if (s21 as any !== peg$FAILED) {
                                              peg$savedPos = s0;
                                              s1 = peg$c15(s5, s9, s13, s17, s18, s19, s20);
                                              s0 = s1;
                                            } else {
                                              peg$currPos = s0;
                                              s0 = peg$FAILED;
                                            }
                                          } else {
                                            peg$currPos = s0;
                                            s0 = peg$FAILED;
                                          }
                                        } else {
                                          peg$currPos = s0;
                                          s0 = peg$FAILED;
                                        }
                                      } else {
                                        peg$currPos = s0;
                                        s0 = peg$FAILED;
                                      }
                                    } else {
                                      peg$currPos = s0;
                                      s0 = peg$FAILED;
                                    }
                                  } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                  }
                                } else {
                                  peg$currPos = s0;
                                  s0 = peg$FAILED;
                                }
                              } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                              }
                            } else {
                              peg$currPos = s0;
                              s0 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseAlpha(): any {
    let s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 as any !== peg$FAILED) {
      if (input.substr(peg$currPos, 5) === peg$c16) {
        s2 = peg$c16;
        peg$currPos += 5;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c17); }
      }
      if (s2 as any !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 as any !== peg$FAILED) {
          s4 = peg$parseInteger();
          if (s4 as any !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c18(s4);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseLuminance(): any {
    let s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 as any !== peg$FAILED) {
      if (input.substr(peg$currPos, 9) === peg$c19) {
        s2 = peg$c19;
        peg$currPos += 9;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c20); }
      }
      if (s2 as any !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 as any !== peg$FAILED) {
          s4 = peg$parseInteger();
          if (s4 as any !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c21(s4);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseTexture(): any {
    let s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseMaterial();
    if (s1 as any === peg$FAILED) {
      s1 = peg$parseMaterialWithArgs();
    }
    if (s1 as any !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c22(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseMaterial(): any {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 as any !== peg$FAILED) {
      if (input.substr(peg$currPos, 6) === peg$c23) {
        s2 = peg$c23;
        peg$currPos += 6;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c24); }
      }
      if (s2 as any === peg$FAILED) {
        if (input.substr(peg$currPos, 11) === peg$c25) {
          s2 = peg$c25;
          peg$currPos += 11;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c26); }
        }
        if (s2 as any === peg$FAILED) {
          if (input.substr(peg$currPos, 6) === peg$c27) {
            s2 = peg$c27;
            peg$currPos += 6;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c28); }
          }
          if (s2 as any === peg$FAILED) {
            if (input.substr(peg$currPos, 14) === peg$c29) {
              s2 = peg$c29;
              peg$currPos += 14;
            } else {
              s2 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c30); }
            }
            if (s2 as any === peg$FAILED) {
              if (input.substr(peg$currPos, 5) === peg$c31) {
                s2 = peg$c31;
                peg$currPos += 5;
              } else {
                s2 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c32); }
              }
            }
          }
        }
      }
      if (s2 as any !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c33();
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseMaterialWithArgs(): any {
    let s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 as any !== peg$FAILED) {
      if (input.substr(peg$currPos, 8) === peg$c34) {
        s2 = peg$c34;
        peg$currPos += 8;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c35); }
      }
      if (s2 as any !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 as any !== peg$FAILED) {
          s4 = peg$parseArg();
          if (s4 as any !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c36(s4);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseArg(): any {
    let s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseGlitter();
    if (s1 as any === peg$FAILED) {
      s1 = peg$parseSpeckle();
    }
    if (s1 as any !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c37(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseSpeckle(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 7) === peg$c38) {
      s1 = peg$c38;
      peg$currPos += 7;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c39); }
    }
    if (s1 as any !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 as any !== peg$FAILED) {
        if (input.substr(peg$currPos, 5) === peg$c11) {
          s3 = peg$c11;
          peg$currPos += 5;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c12); }
        }
        if (s3 as any !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 as any !== peg$FAILED) {
            s5 = peg$parseValue();
            if (s5 as any !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 as any !== peg$FAILED) {
                if (input.substr(peg$currPos, 8) === peg$c40) {
                  s7 = peg$c40;
                  peg$currPos += 8;
                } else {
                  s7 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c41); }
                }
                if (s7 as any !== peg$FAILED) {
                  s8 = peg$parse_();
                  if (s8 as any !== peg$FAILED) {
                    s9 = peg$parseFloat();
                    if (s9 as any !== peg$FAILED) {
                      s10 = peg$parse_();
                      if (s10 as any !== peg$FAILED) {
                        s11 = peg$parseMinMaxSize();
                        if (s11 as any !== peg$FAILED) {
                          peg$savedPos = s0;
                          s1 = peg$c42(s5, s9, s11);
                          s0 = s1;
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseGlitter(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15;
